--- a/_includes/proficiency.html
+++ b/_includes/proficiency.html
@@ -1,18 +1,13 @@
-{% assign skills = site.data.data.skills %}
+{% assign proficiency = site.data.data.proficiency %}
 {% if skills %}
-<section class="skills-section section">
+<div class="interests-container container-block">
 
-  <h2 class="section-title">
-    <span class="fa-stack fa-xs">
-      <i class="fas fa-circle fa-stack-2x"></i>
-      <i class="fas fa-wrench fa-stack-1x fa-inverse"></i>
-    </span>
-    {{ skills.title }}
+  <h2 class="proficiency-block-title">
+    Interests
   </h2>
-
   <div class="skillset">
 
-    {% for skill in skills.toolset %}
+    {% for proficiency in proficiency.toolset %}
     <div class="item">
 
       <h3 class="level-title">{{ skill.name }}</h3>
@@ -26,6 +21,4 @@
     {% endfor %}
 
   </div>
-
-</section><!--//skills-section-->
 {% endif %}
