--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,6 +1,6 @@
-{% assign skills = site.data.data.skills %}
-{% if skills %}
-<section class="skills-section section">
+{% assign proficiency = site.data.data.proficiency %}
+{% if proficiency %}
+<section class="proficiency-section section">
 
   <h2 class="section-title">
     <span class="fa-stack fa-xs">
