--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,6 +1,6 @@
-{% assign proficiency = site.data.data.proficiency %}
-{% if proficiency %}
-<section class="proficiency-section section">
+{% assign skill = site.data.data.skill %}
+{% if skill %}
+<section class="skill-section section">
 
   <h2 class="section-title">
     <span class="fa-stack fa-xs">
