--- a/_includes/proficiency.html
+++ b/_includes/proficiency.html
@@ -3,8 +3,9 @@
 <div class="interests-container container-block">
 
   <h2 class="proficiency-block-title">
-    Interests
+    Proficiency
   </h2>
+  
   <div class="skillset">
 
   {% for proficiency in skills.toolset %}
